--- a/css/section.css
+++ b/css/section.css
@@ -4,12 +4,14 @@
     border: 2px solid #2e1414 ;
     border-radius: 10px;
     margin: 20px auto; 
-    width: 80%;
+    width: 90%;
     text-align: center;
+    overflow-x: auto;
 }
 
 .section__header {
     color: #3a3939;
     text-align: center;
     font-size: 40px;
+    max-width: 100%;
 }
